--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -27,6 +29,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -49,22 +52,42 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01'
-    implementation 'androidx.activity:activity-compose:1.3.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
+    implementation 'androidx.activity:activity-compose:1.3.0-beta02'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     // Compose Extra
-    implementation 'androidx.navigation:navigation-compose:2.4.0-alpha02'
+    implementation 'androidx.navigation:navigation-compose:2.4.0-alpha03'
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07'
-
-    // Koin
-    implementation 'io.insert-koin:koin-androidx-compose:3.0.1'
-    implementation 'io.insert-koin:koin-android-ext:3.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08'
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Web3j (Do not update to 5.0.0, which is actually older than 4.8.4)
+    // See: https://mvnrepository.com/artifact/org.web3j/core
+    implementation 'org.web3j:core:4.8.4'
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
+
+    // DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0-beta02'
+
+    // Logger
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+
+    // Mockito
+    implementation 'org.mockito:mockito-core:3.11.1'
+
+    // java.time desugar
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
+    // Charts
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
